# learn_iceberg

./: README.md
iceberg_pyspark_project/: learn_iceberg.ipynb  pyproject.toml
iceberg_pyspark_project/spark-warehouse/iceberg/schema/users/data/: .00000-3-5fe4d3ed-d322-4553-8e6f-dd49268bca6c-0-00001.parquet.crc  .00000-6-4e425195-8d33-45ec-974c-11bd6680924a-0-00001.parquet.crc  .00001-1-7cc2f5ad-b312-4a6d-9475-5996e1ec1b44-0-00001.parquet.crc  00000-3-5fe4d3ed-d322-4553-8e6f-dd49268bca6c-0-00001.parquet  00000-6-4e425195-8d33-45ec-974c-11bd6680924a-0-00001.parquet  00001-1-7cc2f5ad-b312-4a6d-9475-5996e1ec1b44-0-00001.parquet
iceberg_pyspark_project/spark-warehouse/iceberg/schema/users/metadata/: .2c09a514-630f-4b9d-9a54-3dc746694695-m0.avro.crc  .b369d4e0-d08c-465e-859a-9c678504e7c5-m0.avro.crc  .b369d4e0-d08c-465e-859a-9c678504e7c5-m1.avro.crc  .e1890370-f7e0-4a46-8328-cf7a4a31d7de-m0.avro.crc  .f57ebf9c-9393-4d9b-a9b4-4113140b1bec-m0.avro.crc  .f57ebf9c-9393-4d9b-a9b4-4113140b1bec-m1.avro.crc  .snap-3945301482846454054-1-e1890370-f7e0-4a46-8328-cf7a4a31d7de.avro.crc  .snap-6281984410553080378-1-b369d4e0-d08c-465e-859a-9c678504e7c5.avro.crc  .snap-8496950823959274173-1-f57ebf9c-9393-4d9b-a9b4-4113140b1bec.avro.crc  .snap-8608312342327834503-1-2c09a514-630f-4b9d-9a54-3dc746694695.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  .v3.metadata.json.crc  .v4.metadata.json.crc  .v5.metadata.json.crc  2c09a514-630f-4b9d-9a54-3dc746694695-m0.avro  b369d4e0-d08c-465e-859a-9c678504e7c5-m0.avro  b369d4e0-d08c-465e-859a-9c678504e7c5-m1.avro  v1.metadata.json  (+11 more)
(+20 files in other folders)
