[project]
name = "learn-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "siki4946",email = "siki4946kafuka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyspark = "^4.0.0"
ipykernel = "^6.29.5"

